feat: rt-24099 manually uppercase camp titles
Because soon CYBERSECURITY becomes GenCyber.

--- a/web-content/root/education/k-12-outreach/students/code-at-tacc-robotics-content.html
+++ b/web-content/root/education/k-12-outreach/students/code-at-tacc-robotics-content.html
@@ -6,7 +6,7 @@
 				<img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-at-tacc-logo code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1158641/Code-Wearables-1074px.png" /></p>
 		</div>
 		<div class="col-sm-12">
-			<span class="camp-name">Robotics</span></div>
+			<span class="camp-name">ROBOTICS</span></div>
 		<!-- <h1 style="text-align: center;">Code@TACCATX</h1> --><!-- <a style="text-align: center;"><img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1151567/Code@TACC-logo-small.png" style="margin:0px; padding:0px; width: 300px;" /></a> --><!-- <div class="col-sm-12">
 			<p>
 				<img alt="DesignSafe-CI Camp logo" class="img-responsive code-logo-ds" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DSCamp-logo-centered.png" /></p>
