--- a/web-content/root/education/k-12-outreach/students/code-at-tacc-connected.html
+++ b/web-content/root/education/k-12-outreach/students/code-at-tacc-connected.html
@@ -6,7 +6,7 @@
 				<img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-at-tacc-logo code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1158641/Code-Wearables-1074px.png" /></p>
 		</div>
 		<div class="col-sm-12">
-			<span class="camp-name">Connected</span></div>
+			<span class="camp-name">CONNECTED</span></div>
 		<div class="col-md-12">
 			<h2 class="camp-dates rwd-dates">
 				July 24 – July 30, 2022</h2>
