--- a/web-content/root/education/k-12-outreach/students/code-at-tacc-cybersecurity.html
+++ b/web-content/root/education/k-12-outreach/students/code-at-tacc-cybersecurity.html
@@ -3,13 +3,17 @@
 	<header class="row">
 		<div class="col-sm-12">
 			<p>
-				<img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-at-tacc-logo code-main-logo" src="/documents/1084364/2291703/gencyber-logo.png/79f47906-8bd5-4ca1-becd-0dc9a882768b?t=1673034663159" /></p>
+				<img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-at-tacc-logo code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1158641/Code-Wearables-1074px.png" /></p>
 		</div>
 		<div class="col-sm-12">
-			<span class="camp-name">GenCyber</span></div>
+			<span class="camp-name">CYBERSECURITY</span></div>
+		<!-- <h1 style="text-align: center;">Code@TACCATX</h1> --><!-- <a style="text-align: center;"><img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1151567/Code@TACC-logo-small.png" style="margin:0px; padding:0px; width: 300px;" /></a> --><!-- <div class="col-sm-12">
+			<p>
+				<img alt="DesignSafe-CI Camp logo" class="img-responsive code-logo-ds" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DSCamp-logo-centered.png" /></p>
+		</div> -->
 		<div class="col-md-12">
 			<h2 class="camp-dates rwd-dates">
-				June 11th – June 17th, 2023</h2>
+				June 12–18, 2022</h2>
 		</div>
 	</header>
 	<div class="row">
@@ -17,15 +21,18 @@
 			<p class="centered">
 				<img alt="Camp group photo" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-0920.jpeg/" /></p>
 		</div>
-	</div>
+		<!-- <div class="col-md-6">
+			<p class="centered">
+				<img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DScamp02.png" /></p>
+		</div> --></div>
 	<div class="row">
 		<div class="col-md-6">
 			<p>
-				GenCyber@TACC Cybersecurity is an innovative and exciting summer program that increases high school students' interest in cybersecurity careers and online safety. Students participate in fun, exploratory lessons and learn about online personal safety, computer networking, mobile security, cryptography, cloud computing, cyber-crime and ethics.</p>
+				Code@TACC Cybersecurity is an innovative and exciting summer program that increases high school students' interest in cybersecurity careers and online safety. Students participate in fun, exploratory lessons and learn about online personal safety, computer networking, mobile security, cryptography, cloud computing, cyber-crime and ethics.</p>
 			<p>
-				All current 10th through 11th grade (rising 11th and 12th grade) high school students are welcome to apply. Students from diverse backgrounds are encouraged to apply. Selected students will be accepted and housed in a campus dorm at The University of Texas at Austin (UT).</p>
+				All current 10th through 11th grade high school students are welcome to apply. Students from diverse backgrounds are encouraged to apply. Selected students will be accepted and housed in a campus dorm at The University of Texas at Austin (UT).</p>
 			<p>
-				Students are expected to participate in GenCyber@TACC Cybersecurity until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program.</p>
+				Students are expected to participate in Code@TACC Cybersecurity until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program.</p>
 		</div>
 		<div class="col-md-6">
 			<p class="centered">
@@ -36,7 +43,7 @@
 	<div class="row  data-banner">
 		<div class="col-md-4  data-banner__column">
 			<h2>
-				<span class="data-banner__title">Dates</span> <span class="data-banner__title-content">June 11–17, 2023</span></h2>
+				<span class="data-banner__title">Dates</span> <span class="data-banner__title-content">June 12–18, 2022</span></h2>
 		</div>
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
@@ -85,8 +92,6 @@
 			<img alt="Students collaboratively working on laptop" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-1.jpeg/" /></p>
 	</div>
 	<!-- Camp Info: FAQs, What not to Bring -->
-	<!-- RT #24099 hid so much, that the section became irrelevant -->
-	<!--
 	<div class="row">
 		<div class="col-md-12">
 			<h2 class="camp-subhead">
@@ -98,10 +103,10 @@
 					<ul class="info-list">
 						<li>
 							Willingness to learn</li>
-						</!--<li>
+						<!--<li>
 							<a href="https://idmanager.its.utexas.edu/eid_self_help/" target="_blank" title="UT E-ID Self-Service Tools">Get a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>
 						<li>
-							<a href="https://youtu.be/EePa27mGuGE" target="_blank" title="Creating a UT EID (YouTube video instructions)">Video instructions to "Get" a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>--/>
+							<a href="https://youtu.be/EePa27mGuGE" target="_blank" title="Creating a UT EID (YouTube video instructions)">Video instructions to "Get" a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>-->
 					</ul>
 				</div>
 				<div class="col-md-4 col-sm-12">
@@ -109,9 +114,9 @@
 						PROGRAM FORMS</h4>--><!--<ul class="info-list">
 						<li>
 							Required forms will be available soon.</li>
-					</ul>--/>
-					</!--<p>
-						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257cXKQGsJJEGEI%253d&amp;filter=peid%7CXKQGsJJEGEI%3D" target="_blank">Program Forms</a></p>--/>
+					</ul>-->
+					<p>
+						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257cXKQGsJJEGEI%253d&amp;filter=peid%7CXKQGsJJEGEI%3D" target="_blank">Program Forms</a></p>
 					<p>
 						<small>Code of Conduct,<br />
 						Release and Indemnification,<br />
@@ -122,17 +127,16 @@
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
-					</!--<ul class="info-list">
+					<ul class="info-list">
 						<li>
 							<a href="/documents/1084364/1736606/2022+YPP-Communication-Plan-Cybersecurity+English.pdf" target="_blank">2022 Y.P.P. Communication Plan - English</a></li>
 						<li>
 							<a href="/documents/1084364/1736606/2022+YPP-Communication-Plan-Cybersecurity-Spanish.pdf" target="_blank">2022 Y.P.P. Communication Plan - Español</a></li>
-					</ul>--/>
+					</ul>
 				</div>
 			</div>
 		</div>
 	</div>
-	-->
 </div>
 <div class="container">
 	<div class="row">
@@ -149,7 +153,7 @@
 					</div>
 					<div aria-labelledby="dates" class="panel-collapse collapse" id="dates-answer" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> Sunday June 11th through Saturday June 17th, 2023.</div>
+							<b>A:</b> Sunday, June 12 through Saturday, June 18, 2022.</div>
 					</div>
 				</div>
 				<div class="panel panel-default">
