feat: rt-24100, gencyber level up remove photos

--- a/web-content/root/education/k-12-outreach/students/gencyber-at-tacc-level-up.html
+++ b/web-content/root/education/k-12-outreach/students/gencyber-at-tacc-level-up.html
@@ -12,22 +12,23 @@
 				July 23rd – July 29th, 2023</h2>
 		</div>
 	</header>
-	<div class="row">
+	<!--<div class="row">
 		<div class="col-md-12 col-sm-12">
 			<p class="centered">
 				<img alt="Camp group photo" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-0920.jpeg/" /></p>
 		</div>
-	</div>
+	</div>-->
 	<div class="row">
+		<div class="col-md-3"><!-- … --></div>
 		<div class="col-md-6">
 			<p>
 				GenCyber@TACC Level UP is an innovative and exciting summer program that will level up high school students' knowledge in cybersecurity careers and online safety. Students participate in fun, exploratory lessons and learn more about topics like: cyber ethics, threat assessment and modeling, network fundamentals, cryptography, web application security, internet safety and privacy, system hardening, and IT fundamentals. All current 10th, 11th and 12th grade high school students are welcome to apply. Students from diverse backgrounds are encouraged to apply. Selected students will be accepted and housed in a campus dorm at The University of Texas at Austin (UT).</p>
 			<p>
 				Students are expected to participate in GenCyber@TACC Level UP until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program.</p>
 		</div>
-		<div class="col-md-6">
-			<p class="centered">
-				<img alt="Students analyzing inside of computer" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-2.jpeg/" /></p>
+		<div class="col-md-3">
+			<!--<p class="centered">
+				<img alt="Students analyzing inside of computer" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-2.jpeg/" /></p>-->
 		</div>
 	</div>
 	<!-- Short Info about camp -->
@@ -38,19 +39,19 @@
 		</div>
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
-				<span class="data-banner__title">Application</span><!--<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_0qY4tR6vFwoeOLs" target="_blank">Click to Apply</a>--></h2>
+				<span class="data-banner__title">Application</span><a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_9QYuG97p8WLvmf4" target="_blank">Click to Apply</a></h2>
 			<!-- OPEN: Close on Date. --><!--
 			<p class="data-banner__content">
 				Registration closes on _Month_ _DATE_, _YEAR_.</p>
 			--><!-- OPEN: Close on Date. Notify by Date --><!--
 			<p class="data-banner__content  small">
 				Application closes April 18, 2022. Students to be notified of acceptance on April 29, 2022.</p>
-			--><!-- CLOSED: Notify by Date --><!--
+			--><!-- CLOSED: Notify by Date -->
 			<p class="data-banner__content  small">
-				Participants will be notified by _Month_ _DATE_, if they were selected to participate in the program.</p>
-			--><!-- CLOSED: Simple -->
-			<p class="data-banner__content">
-				Check back in January 2023 for future opportunities.</p>
+				Students will be notified of selections by May 19th, 2023.</p>
+			<!-- CLOSED: Simple -->
+			<!--<p class="data-banner__content">
+				Check back in January 2023 for future opportunities.</p>-->
 		</div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
@@ -62,7 +63,7 @@
 		<h3 class="camp-subhead">
 			PROSPECTIVE ACTIVITIES</h3>
 		<p class="col-md-3  centered">
-			<img alt="Students looking at laptop screen" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-3.jpeg/" /></p>
+			<!--<img alt="Students looking at laptop screen" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-3.jpeg/" />--></p>
 		<div class="col-md-6">
 			<ul class="small">
 				<li>
@@ -80,7 +81,7 @@
 			</ul>
 		</div>
 		<p class="col-md-3  centered">
-			<img alt="Students collaboratively working on laptop" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-1.jpeg/" /></p>
+			<!--<img alt="Students collaboratively working on laptop" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-1.jpeg/" />--></p>
 	</div>
 	<!-- Camp Info: FAQs, What not to Bring -->
 	<!-- RT #24099 hid so much, that the section became irrelevant -->
