feat: rt-24099, cyberecurity 2022 → gencyber 2023

--- a/web-content/root/education/k-12-outreach/students/code-at-tacc-gencyber.html
+++ b/web-content/root/education/k-12-outreach/students/code-at-tacc-gencyber.html
@@ -3,63 +3,59 @@
 	<header class="row">
 		<div class="col-sm-12">
 			<p>
-				<img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-at-tacc-logo code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1158641/Code-Wearables-1074px.png" /></p>
+				<img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-at-tacc-logo code-main-logo" src="/documents/1084364/2291703/gencyber-logo.png/79f47906-8bd5-4ca1-becd-0dc9a882768b?t=1673034663159" /></p>
 		</div>
 		<div class="col-sm-12">
-			<span class="camp-name">CYBERSECURITY</span></div>
-		<!-- <h1 style="text-align: center;">Code@TACCATX</h1> --><!-- <a style="text-align: center;"><img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1151567/Code@TACC-logo-small.png" style="margin:0px; padding:0px; width: 300px;" /></a> --><!-- <div class="col-sm-12">
-			<p>
-				<img alt="DesignSafe-CI Camp logo" class="img-responsive code-logo-ds" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DSCamp-logo-centered.png" /></p>
-		</div> -->
+			<span class="camp-name">GenCyber</span></div>
 		<div class="col-md-12">
 			<h2 class="camp-dates rwd-dates">
-				June 12–18, 2022</h2>
+				June 11th – June 17th, 2023</h2>
 		</div>
 	</header>
-	<div class="row">
+	<!--<div class="row">
 		<div class="col-md-12 col-sm-12">
 			<p class="centered">
 				<img alt="Camp group photo" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-0920.jpeg/" /></p>
 		</div>
-		<!-- <div class="col-md-6">
-			<p class="centered">
-				<img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DScamp02.png" /></p>
-		</div> --></div>
+	</div>-->
 	<div class="row">
-		<div class="col-md-6">
-			<p>
-				Code@TACC Cybersecurity is an innovative and exciting summer program that increases high school students' interest in cybersecurity careers and online safety. Students participate in fun, exploratory lessons and learn about online personal safety, computer networking, mobile security, cryptography, cloud computing, cyber-crime and ethics.</p>
-			<p>
-				All current 10th through 11th grade high school students are welcome to apply. Students from diverse backgrounds are encouraged to apply. Selected students will be accepted and housed in a campus dorm at The University of Texas at Austin (UT).</p>
-			<p>
-				Students are expected to participate in Code@TACC Cybersecurity until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program.</p>
+		<div class="col-md-3">
+			<!-- … -->
 		</div>
 		<div class="col-md-6">
-			<p class="centered">
-				<img alt="Students analyzing inside of computer" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-2.jpeg/" /></p>
+			<p>
+				GenCyber@TACC Cybersecurity is an innovative and exciting summer program that increases high school students' interest in cybersecurity careers and online safety. Students participate in fun, exploratory lessons and learn about online personal safety, computer networking, mobile security, cryptography, cloud computing, cyber-crime and ethics.</p>
+			<p>
+				All current 10th through 11th grade (rising 11th and 12th grade) high school students are welcome to apply. Students from diverse backgrounds are encouraged to apply. Selected students will be accepted and housed in a campus dorm at The University of Texas at Austin (UT).</p>
+			<p>
+				Students are expected to participate in GenCyber@TACC Cybersecurity until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program.</p>
+		</div>
+		<div class="col-md-3">
+			<!--<p class="centered">
+				<img alt="Students analyzing inside of computer" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-2.jpeg/" /></p>-->
 		</div>
 	</div>
 	<!-- Short Info about camp -->
 	<div class="row  data-banner">
 		<div class="col-md-4  data-banner__column">
 			<h2>
-				<span class="data-banner__title">Dates</span> <span class="data-banner__title-content">June 12–18, 2022</span></h2>
+				<span class="data-banner__title">Dates</span> <span class="data-banner__title-content">June 11–17, 2023</span></h2>
 		</div>
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
-				<span class="data-banner__title">Application</span><!--<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_0qY4tR6vFwoeOLs" target="_blank">Click to Apply</a>--></h2>
+				<span class="data-banner__title">Application</span><a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_9MK1BtR5Y0S03hI" target="_blank">Click to Apply</a></h2>
 			<!-- OPEN: Close on Date. --><!--
 			<p class="data-banner__content">
 				Registration closes on _Month_ _DATE_, _YEAR_.</p>
 			--><!-- OPEN: Close on Date. Notify by Date --><!--
 			<p class="data-banner__content  small">
 				Application closes April 18, 2022. Students to be notified of acceptance on April 29, 2022.</p>
-			--><!-- CLOSED: Notify by Date --><!--
+			--><!-- CLOSED: Notify by Date -->
 			<p class="data-banner__content  small">
-				Participants will be notified by _Month_ _DATE_, if they were selected to participate in the program.</p>
-			--><!-- CLOSED: Simple -->
-			<p class="data-banner__content">
-				Check back in January 2023 for future opportunities.</p>
+				Students will be notified of selections by April 28th, 2023.</p>
+			<!-- CLOSED: Simple -->
+			<!--<p class="data-banner__content">
+				Check back in January 2023 for future opportunities.</p>-->
 		</div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
@@ -71,7 +67,7 @@
 		<h3 class="camp-subhead">
 			PROSPECTIVE ACTIVITIES</h3>
 		<p class="col-md-3  centered">
-			<img alt="Students looking at laptop screen" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-3.jpeg/" /></p>
+			<!--<img alt="Students looking at laptop screen" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-3.jpeg/" />--></p>
 		<div class="col-md-6">
 			<ul class="small">
 				<li>
@@ -89,9 +85,11 @@
 			</ul>
 		</div>
 		<p class="col-md-3  centered">
-			<img alt="Students collaboratively working on laptop" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-1.jpeg/" /></p>
+			<!--<img alt="Students collaboratively working on laptop" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-1.jpeg/" />--></p>
 	</div>
 	<!-- Camp Info: FAQs, What not to Bring -->
+	<!-- RT #24099 hid so much, that the section became irrelevant -->
+	<!--
 	<div class="row">
 		<div class="col-md-12">
 			<h2 class="camp-subhead">
@@ -103,10 +101,10 @@
 					<ul class="info-list">
 						<li>
 							Willingness to learn</li>
-						<!--<li>
+						</!--<li>
 							<a href="https://idmanager.its.utexas.edu/eid_self_help/" target="_blank" title="UT E-ID Self-Service Tools">Get a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>
 						<li>
-							<a href="https://youtu.be/EePa27mGuGE" target="_blank" title="Creating a UT EID (YouTube video instructions)">Video instructions to "Get" a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>-->
+							<a href="https://youtu.be/EePa27mGuGE" target="_blank" title="Creating a UT EID (YouTube video instructions)">Video instructions to "Get" a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>--/>
 					</ul>
 				</div>
 				<div class="col-md-4 col-sm-12">
@@ -114,9 +112,9 @@
 						PROGRAM FORMS</h4>--><!--<ul class="info-list">
 						<li>
 							Required forms will be available soon.</li>
-					</ul>-->
-					<p>
-						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257cXKQGsJJEGEI%253d&amp;filter=peid%7CXKQGsJJEGEI%3D" target="_blank">Program Forms</a></p>
+					</ul>--/>
+					</!--<p>
+						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257cXKQGsJJEGEI%253d&amp;filter=peid%7CXKQGsJJEGEI%3D" target="_blank">Program Forms</a></p>--/>
 					<p>
 						<small>Code of Conduct,<br />
 						Release and Indemnification,<br />
@@ -127,16 +125,17 @@
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
-					<ul class="info-list">
+					</!--<ul class="info-list">
 						<li>
 							<a href="/documents/1084364/1736606/2022+YPP-Communication-Plan-Cybersecurity+English.pdf" target="_blank">2022 Y.P.P. Communication Plan - English</a></li>
 						<li>
 							<a href="/documents/1084364/1736606/2022+YPP-Communication-Plan-Cybersecurity-Spanish.pdf" target="_blank">2022 Y.P.P. Communication Plan - Español</a></li>
-					</ul>
+					</ul>--/>
 				</div>
 			</div>
 		</div>
 	</div>
+	-->
 </div>
 <div class="container">
 	<div class="row">
@@ -153,7 +152,7 @@
 					</div>
 					<div aria-labelledby="dates" class="panel-collapse collapse" id="dates-answer" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> Sunday, June 12 through Saturday, June 18, 2022.</div>
+							<b>A:</b> Sunday June 11th through Saturday June 17th, 2023.</div>
 					</div>
 				</div>
 				<div class="panel panel-default">
