fix: rt-24099, a date & some whitespace

--- a/web-content/root/education/k-12-outreach/students/code-at-tacc-gencyber.html
+++ b/web-content/root/education/k-12-outreach/students/code-at-tacc-gencyber.html
@@ -20,20 +20,18 @@
 	</div>-->
 	<div class="row">
 		<div class="col-md-3">
-			<!-- … -->
-		</div>
+			<!-- … --></div>
 		<div class="col-md-6">
 			<p>
 				GenCyber@TACC Cybersecurity is an innovative and exciting summer program that increases high school students' interest in cybersecurity careers and online safety. Students participate in fun, exploratory lessons and learn about online personal safety, computer networking, mobile security, cryptography, cloud computing, cyber-crime and ethics.</p>
 			<p>
-				All current 10th through 11th grade (rising 11th and 12th grade) high school students are welcome to apply. Students from diverse backgrounds are encouraged to apply. Selected students will be accepted and housed in a campus dorm at The University of Texas at Austin (UT).</p>
+				All current 9th through 11th grade (rising 10th and 12th grade) high school students are welcome to apply. Students from diverse backgrounds are encouraged to apply. Selected students will be accepted and housed in a campus dorm at The University of Texas at Austin (UT).</p>
 			<p>
 				Students are expected to participate in GenCyber@TACC Cybersecurity until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program.</p>
 		</div>
 		<div class="col-md-3">
 			<!--<p class="centered">
-				<img alt="Students analyzing inside of computer" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-2.jpeg/" /></p>-->
-		</div>
+				<img alt="Students analyzing inside of computer" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-2.jpeg/" /></p>--></div>
 	</div>
 	<!-- Short Info about camp -->
 	<div class="row  data-banner">
@@ -53,10 +51,8 @@
 			--><!-- CLOSED: Notify by Date -->
 			<p class="data-banner__content  small">
 				Students will be notified of selections by April 28th, 2023.</p>
-			<!-- CLOSED: Simple -->
-			<!--<p class="data-banner__content">
-				Check back in January 2023 for future opportunities.</p>-->
-		</div>
+			<!-- CLOSED: Simple --><!--<p class="data-banner__content">
+				Check back in January 2023 for future opportunities.</p>--></div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
 				<span class="data-banner__title">Cost</span> <span class="data-banner__title-content">FREE</span></h2>
@@ -87,9 +83,7 @@
 		<p class="col-md-3  centered">
 			<!--<img alt="Students collaboratively working on laptop" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-1.jpeg/" />--></p>
 	</div>
-	<!-- Camp Info: FAQs, What not to Bring -->
-	<!-- RT #24099 hid so much, that the section became irrelevant -->
-	<!--
+	<!-- Camp Info: FAQs, What not to Bring --><!-- RT #24099 hid so much, that the section became irrelevant --><!--
 	<div class="row">
 		<div class="col-md-12">
 			<h2 class="camp-subhead">
@@ -135,8 +129,7 @@
 			</div>
 		</div>
 	</div>
-	-->
-</div>
+	--></div>
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
