chore: rt-24100, gencyber lev up, updates from cms

--- a/web-content/root/education/k-12-outreach/students/gencyber-at-tacc-level-up.html
+++ b/web-content/root/education/k-12-outreach/students/gencyber-at-tacc-level-up.html
@@ -19,17 +19,17 @@
 		</div>
 	</div>-->
 	<div class="row">
-		<div class="col-md-3"><!-- … --></div>
+		<div class="col-md-3">
+			<!-- … --></div>
 		<div class="col-md-6">
 			<p>
-				GenCyber@TACC Level UP is an innovative and exciting summer program that will level up high school students' knowledge in cybersecurity careers and online safety. Students participate in fun, exploratory lessons and learn more about topics like: cyber ethics, threat assessment and modeling, network fundamentals, cryptography, web application security, internet safety and privacy, system hardening, and IT fundamentals. All current 10th, 11th and 12th grade high school students are welcome to apply. Students from diverse backgrounds are encouraged to apply. Selected students will be accepted and housed in a campus dorm at The University of Texas at Austin (UT).</p>
+				GenCyber@TACC Level UP is an innovative and exciting summer program that will level up high school students' knowledge in cybersecurity careers and online safety. Students participate in fun, exploratory lessons and learn more about topics like: cyber ethics, threat assessment and modeling, job interviewing, and career development. All current 10th-12th grade high school students (rising 11th - high school graduates) are welcome to apply. Students from diverse backgrounds are encouraged to apply. Selected students will be accepted and housed in a campus dorm at The University of Texas at Austin (UT).</p>
 			<p>
 				Students are expected to participate in GenCyber@TACC Level UP until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program.</p>
 		</div>
 		<div class="col-md-3">
 			<!--<p class="centered">
-				<img alt="Students analyzing inside of computer" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-2.jpeg/" /></p>-->
-		</div>
+				<img alt="Students analyzing inside of computer" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-2.jpeg/" /></p>--></div>
 	</div>
 	<!-- Short Info about camp -->
 	<div class="row  data-banner">
@@ -49,10 +49,8 @@
 			--><!-- CLOSED: Notify by Date -->
 			<p class="data-banner__content  small">
 				Students will be notified of selections by May 19th, 2023.</p>
-			<!-- CLOSED: Simple -->
-			<!--<p class="data-banner__content">
-				Check back in January 2023 for future opportunities.</p>-->
-		</div>
+			<!-- CLOSED: Simple --><!--<p class="data-banner__content">
+				Check back in January 2023 for future opportunities.</p>--></div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
 				<span class="data-banner__title">Cost</span> <span class="data-banner__title-content">FREE</span></h2>
@@ -83,9 +81,7 @@
 		<p class="col-md-3  centered">
 			<!--<img alt="Students collaboratively working on laptop" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-1.jpeg/" />--></p>
 	</div>
-	<!-- Camp Info: FAQs, What not to Bring -->
-	<!-- RT #24099 hid so much, that the section became irrelevant -->
-	<!--
+	<!-- Camp Info: FAQs, What not to Bring --><!-- RT #24099 hid so much, that the section became irrelevant --><!--
 	<div class="row">
 		<div class="col-md-12">
 			<h2 class="camp-subhead">
@@ -131,8 +127,7 @@
 			</div>
 		</div>
 	</div>
-	-->
-</div>
+	--></div>
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
