--- a/web-content/root/education/k-12-outreach/students/gencyber-at-tacc-level-up.html
+++ b/web-content/root/education/k-12-outreach/students/gencyber-at-tacc-level-up.html
@@ -12,12 +12,12 @@
 				July 23rd – July 29th, 2023</h2>
 		</div>
 	</header>
-	<!--<div class="row">
+	<div class="row">
 		<div class="col-md-12 col-sm-12">
 			<p class="centered">
-				<img alt="Camp group photo" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-0920.jpeg/" /></p>
+				<img alt="Camp group photo" class="img-responsive" src="/documents/1084364/2298247/gencyber-level-up-1.jpeg/" /></p>
 		</div>
-	</div>-->
+	</div>
 	<div class="row">
 		<div class="col-md-3">
 			<!-- … --></div>
