feat: rt-24098, camps text updates

--- a/web-content/root/education/k-12-outreach/students/code-at-tacc-robotics-content.html
+++ b/web-content/root/education/k-12-outreach/students/code-at-tacc-robotics-content.html
@@ -13,7 +13,7 @@
 		</div> -->
 		<div class="col-md-12">
 			<h2 class="camp-dates rwd-dates">
-				June 26 – July 2, 2022</h2>
+				June 25 – July , 2023</h2>
 		</div>
 	</header>
 	<div class="row">
@@ -49,23 +49,23 @@
 	<div class="row  data-banner">
 		<div class="col-md-4  data-banner__column">
 			<h2>
-				<span class="data-banner__title">Dates</span> <span class="data-banner__title-content">June 26 – July 2, 2022</span></h2>
+				<span class="data-banner__title">Dates</span> <span class="data-banner__title-content">June 25 – July 1, 2023</span></h2>
 		</div>
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
-				<span class="data-banner__title">Application</span><!--<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_4UiwnpRGmA1obQ2" target="_blank">Click to Apply</a>--></h2>
+				<span class="data-banner__title">Application</span><a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_2auXiK1E8btLVT8" target="_blank">Click to Apply</a></h2>
 			<!-- OPEN: Close on Date. --><!--
 			<p class="data-banner__content">
 				Registration closes on _Month_ _DATE_, _YEAR_.</p>
 			--><!-- OPEN: Close on Date. Notify by Date --><!--
 			<p class="data-banner__content  small">
 				Application closes April 25, 2022. Students to be notified of acceptance on May 6, 2022.</p>
-			--><!-- CLOSED: Notify by Date --><!--
+			--><!-- CLOSED: Notify by Date -->
 			<p class="data-banner__content  small">
-				Participants will be notified by _Month_ _DATE_, if they were selected to participate in the program.</p>
-			--><!-- CLOSED: Simple -->
-			<p class="data-banner__content">
-				Check back in January 2023 for future opportunities.</p>
+				Students will be notified of selections by May 5th, 2023.</p>
+			<!-- CLOSED: Simple -->
+			<!--<p class="data-banner__content">
+				Check back in January 2023 for future opportunities.</p>-->
 		</div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
@@ -83,7 +83,7 @@
 				PROSPECTIVE ACTIVITIES</h3>
 			<ul class="col-md-12">
 				<li>
-					Program a robot.</li>
+					Program an autonomous driving car.</li>
 				<li>
 					Use a project based-learning approach to foster creativity and problem solving skills.</li>
 				<li>
@@ -121,8 +121,8 @@
 						<li>
 							Required forms will be available soon.</li>
 					</ul>-->
-					<p>
-						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257cErEbGtkbztc%253d&amp;filter=peid%7CErEbGtkbztc%3D" target="_blank">Program Forms</a></p>
+					<!--<p>
+						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257cErEbGtkbztc%253d&amp;filter=peid%7CErEbGtkbztc%3D" target="_blank">Program Forms</a></p>-->
 					<p>
 						<small>Code of Conduct (sent in mail),<br />
 						Release and Indemnification,<br />
@@ -130,7 +130,7 @@
 						Y.P.P. Medical Treatment Authorization<br />
 						&amp; Transportation Form</small></p>
 				</div>
-				<div class="col-md-4 col-sm-12">
+				<!--<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
 					<ul class="info-list">
@@ -139,7 +139,7 @@
 						<li>
 							<a href="/documents/1084364/1736606/YPP+Communication+Plan+Robotics+2022+Spanish.pdf/729f3cec-c6cd-4ee3-89ec-2d341ca58113" target="_blank">2022 Y.P.P. Communication Plan - Español</a></li>
 					</ul>
-				</div>
+				</div>-->
 			</div>
 		</div>
 	</div>
@@ -159,7 +159,7 @@
 					</div>
 					<div aria-labelledby="dates" class="panel-collapse collapse" id="dates-answer" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> Sunday, June 26, 2022 through Saturday, July 2, 2022.</div>
+							<b>A:</b> Sunday, June 25, 2023 through Saturday, July 1, 2023.</div>
 					</div>
 				</div>
 				<div class="panel panel-default">
