--- a/web-content/root/education/k-12-outreach/students/code-at-tacc-connected.html
+++ b/web-content/root/education/k-12-outreach/students/code-at-tacc-connected.html
@@ -9,7 +9,7 @@
 			<span class="camp-name">CONNECTED</span></div>
 		<div class="col-md-12">
 			<h2 class="camp-dates rwd-dates">
-				July 24 – July 30, 2022</h2>
+				July 9 – July 15, 2023</h2>
 		</div>
 	</header>
 	<div class="row">
@@ -26,7 +26,7 @@
 			<p>
 				Connected is an innovative and exciting summer program that lets students explore where coding meets communities. You will use networked sensors to collect data and create models for environmentally relevant problems. During the camp, you will learn how data can be used to tell a science story.</p>
 			<p>
-				All current 10th and 11th (rising 11th and 12th graders) high school students with prior electronics or computer programming experience are welcome to apply.</p>
+				All current 10th-12th grade students (rising 10th – high school graduates) are welcome to apply.</p>
 			<p>
 				Students are expected to participate in Code@TACC Connected until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program. Selected students will be accepted and housed in a campus dorm at The University of Texas at Austin (UT).</p>
 			<!--
@@ -43,22 +43,22 @@
 	<div class="row  data-banner">
 		<div class="col-md-4  data-banner__column">
 			<h2>
-				<span class="data-banner__title">Dates</span> <span class="data-banner__title-content">July 24 – July 30, 2022</span></h2>
+				<span class="data-banner__title">Dates</span> <span class="data-banner__title-content">July 9 – July 15, 2023</span></h2>
 		</div>
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
-				<span class="data-banner__title">Application</span><!--<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_40mCaKWMZmYQOQm" target="_blank">Click to Apply</a>--></h2>
+				<span class="data-banner__title">Application</span><a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_6nabXvbuLZWpvYW" target="_blank">Click to Apply</a></h2>
 			<!-- OPEN: Close on Date. --><!--
 			<p class="data-banner__content">
 				Application closes _Month_ _DATE_, _YEAR_</p>
 			--><!-- OPEN: Close on Date. Notify by Date --><!--<p class="data-banner__content  small">
 				Application closes May 5, 2022. Students to be notified of acceptance on May 13, 2022.</p>
-			--><!-- CLOSED: Notify by Date --><!--
+			--><!-- CLOSED: Notify by Date -->
 			<p class="data-banner__content  small">
-				Participants will be notified by _Month_ _DATE_, if they were selected to participate in the program.</p>
-			--><!-- CLOSED: Simple -->
-			<p class="data-banner__content">
-				Check back in January 2023 for future opportunities.</p>
+				Students will be notified of selections by May 12th, 2023.</p>
+			<!-- CLOSED: Simple -->
+			<!--<p class="data-banner__content">
+				Check back in January 2023 for future opportunities.</p>-->
 		</div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
@@ -110,15 +110,15 @@
 						<li>
 							Required forms will be available soon.</li>
 					</ul>-->
-					<p>
-						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257c%252f143oHZkDNA%253d&amp;filter=peid%7C%2F143oHZkDNA%3D" target="_blank">Program Forms</a></p>
+					<!--<p>
+						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257c%252f143oHZkDNA%253d&amp;filter=peid%7C%2F143oHZkDNA%3D" target="_blank">Program Forms</a></p>-->
 					<p>
 						<small>Release and Indemnification,<br />
 						Media Release,<br />
 						Y.P.P. Medical Treatment Authorization<br />
 						&amp; Transportation Form</small></p>
 				</div>
-				<div class="col-md-4 col-sm-12">
+				<!--<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
 					<ul class="info-list">
@@ -127,7 +127,7 @@
 						<li>
 							<a href="/documents/1084364/1736606/YPP-Communication-Plan-Overnight-Camp-%28Connected%29-2022+Spanish.pdf" target="_blank">2022 Y.P.P. Communication Plan - Español</a></li>
 					</ul>
-				</div>
+				</div>-->
 			</div>
 		</div>
 	</div>
@@ -147,7 +147,7 @@
 					</div>
 					<div aria-labelledby="dates" class="panel-collapse collapse" id="dates-answer" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> Sunday, July 24, 2022 through Saturday, July 30, 2022.</div>
+							<b>A:</b> Sunday, July 9, 2023 through Saturday, July 15, 2023.</div>
 					</div>
 				</div>
 				<div class="panel panel-default">
