feat: rt-24098, robotics camp images (by H.P.)

--- a/web-content/root/education/k-12-outreach/students/code-at-tacc-robotics-content.html
+++ b/web-content/root/education/k-12-outreach/students/code-at-tacc-robotics-content.html
@@ -18,9 +18,9 @@
 	</header>
 	<div class="row">
 		<!-- RT-20977: Pending `robotics-5136.jpeg` -->
-		<div class="col-md-12" hidden="">
+		<div class="col-md-12">
 			<p class="centered">
-				<img alt="One female student working on a robotics project" class="img-responsive" src="/documents/1084364/2063698/robotics-3.jpeg/" /></p>
+				<img alt="" class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/2305939/robotics.jpg/e0198ec1-0022-4499-9ad3-196ab3191c63?t=1676010658206" style="margin-bottom:40px;" /></p>
 		</div>
 		<!--
 		<div class="col-md-6">
@@ -42,7 +42,7 @@
 		</div>
 		<div class="col-md-6">
 			<p class="centered">
-				<img alt="Two girls working at desk" class="img-responsive" src="/documents/1084364/2063698/robotics-4439.jpeg/" /></p>
+				<img alt="" class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/2305939/robotics1.jpg/a237c6a9-9faa-4b2d-befb-9d4e2b6fdd8b?t=1676010654344" /></p>
 		</div>
 	</div>
 	<!-- Short Info about camp -->
@@ -63,10 +63,8 @@
 			--><!-- CLOSED: Notify by Date -->
 			<p class="data-banner__content  small">
 				Students will be notified of selections by May 5th, 2023.</p>
-			<!-- CLOSED: Simple -->
-			<!--<p class="data-banner__content">
-				Check back in January 2023 for future opportunities.</p>-->
-		</div>
+			<!-- CLOSED: Simple --><!--<p class="data-banner__content">
+				Check back in January 2023 for future opportunities.</p>--></div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
 				<span class="data-banner__title">Cost</span> <span class="data-banner__title-content">FREE</span></h2>
@@ -76,7 +74,7 @@
 	<div class="row">
 		<div class="col-md-6 col-xs-12">
 			<p class="centered">
-				<img alt="Students standing around robotics car track" class="img-responsive" src="/documents/1084364/2063698/robotics-4655.jpeg/" /></p>
+				<img alt="Group photo" class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/2305939/robotics2.jpg/8b1f1c52-bedc-4455-9a9b-2657f2b91647?t=1676011498511" /></p>
 		</div>
 		<div class="col-md-6 col-xs-12">
 			<h3 class="camp-subhead">
@@ -120,8 +118,7 @@
 						PROGRAM FORMS</h4>--><!--<ul class="info-list">
 						<li>
 							Required forms will be available soon.</li>
-					</ul>-->
-					<!--<p>
+					</ul>--><!--<p>
 						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257cErEbGtkbztc%253d&amp;filter=peid%7CErEbGtkbztc%3D" target="_blank">Program Forms</a></p>-->
 					<p>
 						<small>Code of Conduct (sent in mail),<br />
@@ -139,8 +136,7 @@
 						<li>
 							<a href="/documents/1084364/1736606/YPP+Communication+Plan+Robotics+2022+Spanish.pdf/729f3cec-c6cd-4ee3-89ec-2d341ca58113" target="_blank">2022 Y.P.P. Communication Plan - Español</a></li>
 					</ul>
-				</div>-->
-			</div>
+				</div>--></div>
 		</div>
 	</div>
 </div>
