--- a/web-content/root/education/k-12-outreach/students/code-at-tacc-connected.html
+++ b/web-content/root/education/k-12-outreach/students/code-at-tacc-connected.html
@@ -15,7 +15,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<p class="centered">
-				<img class="img-responsive" src="/documents/1084364/2063698/connected-1.jpeg/" /></p>
+				<img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/2305939/connected.jpg/7f17d029-6abc-47d7-9d98-19249f573278?t=1676010543000" style="margin-bottom: 40px;" /></p>
 		</div>
 		<!--<div class="col-md-6">
 			<p class="centered">
@@ -36,7 +36,7 @@
 				<i>The camp was funded with the generosity from BP Upstream Digital &amp; Technology.</i></p>--></div>
 		<div class="col-md-6">
 			<p class="centered">
-				<img class="img-responsive" src="/documents/1084364/2063698/connected-5252.jpeg" /></p>
+				<img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/2305939/connected1.jpg/a32fa73f-7ceb-4864-b626-01ee7b79ef8a?t=1676010577000" /></p>
 		</div>
 	</div>
 	<!-- Short Info about camp -->
@@ -56,10 +56,8 @@
 			--><!-- CLOSED: Notify by Date -->
 			<p class="data-banner__content  small">
 				Students will be notified of selections by May 12th, 2023.</p>
-			<!-- CLOSED: Simple -->
-			<!--<p class="data-banner__content">
-				Check back in January 2023 for future opportunities.</p>-->
-		</div>
+			<!-- CLOSED: Simple --><!--<p class="data-banner__content">
+				Check back in January 2023 for future opportunities.</p>--></div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
 				<span class="data-banner__title">Cost</span> <span class="data-banner__title-content">FREE</span></h2>
@@ -69,7 +67,7 @@
 	<div class="row">
 		<div class="col-md-6 col-xs-12">
 			<p class="centered">
-				<img alt="Students working on natural hazards project" class="img-responsive" src="/documents/1084364/2063698/connected-5804.jpeg" /></p>
+				<img alt="Students working on natural hazards project" class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/2305939/connected2.jpg/691272a3-168f-401b-871e-f1c5724f534c?t=1676011767648" /></p>
 		</div>
 		<div class="col-md-6 col-xs-12">
 			<h4 class="camp-subhead">
@@ -109,8 +107,7 @@
 						PROGRAM FORMS</h4>--><!--<ul class="info-list">
 						<li>
 							Required forms will be available soon.</li>
-					</ul>-->
-					<!--<p>
+					</ul>--><!--<p>
 						<a class="btn btn-primary" href="https://events.circuitree.com/ut/Registration/RegistrationType/?returnUrl=%252fut%252fRegistration%252fEventSelection%252f%257b0%257d%252f%253ffilter%253dpeid%257c%252f143oHZkDNA%253d&amp;filter=peid%7C%2F143oHZkDNA%3D" target="_blank">Program Forms</a></p>-->
 					<p>
 						<small>Release and Indemnification,<br />
@@ -127,8 +124,7 @@
 						<li>
 							<a href="/documents/1084364/1736606/YPP-Communication-Plan-Overnight-Camp-%28Connected%29-2022+Spanish.pdf" target="_blank">2022 Y.P.P. Communication Plan - Español</a></li>
 					</ul>
-				</div>-->
-			</div>
+				</div>--></div>
 		</div>
 	</div>
 </div>
