feat: rt-24099/24100, camp faq updates

--- a/web-content/root/education/k-12-outreach/students/_faq--on-site.html
+++ b/web-content/root/education/k-12-outreach/students/_faq--on-site.html
@@ -79,7 +79,7 @@
 				<div class="panel panel-default">
 					<div class="panel-heading" id="contact" role="tab">
 						<h4 class="panel-title">
-							<a aria-controls="contact-answer" aria-expanded="true" class="collapsed" data-parent="#shared-common-faq" data-toggle="collapse" href="#contact-answer" role="button"> <b>Q</b>: How can I contact the UT Austin Code@TACC Team? </a></h4>
+							<a aria-controls="contact-answer" aria-expanded="true" class="collapsed" data-parent="#shared-common-faq" data-toggle="collapse" href="#contact-answer" role="button"> <b>Q</b>: How can I contact the UT Austin Code@TACC / GenCyber@TACC Team? </a></h4>
 					</div>
 					<div aria-labelledby="contact" class="panel-collapse collapse" id="contact-answer" role="tabpanel">
 						<div class="panel-body">
@@ -212,7 +212,7 @@
 				<div class="panel panel-default">
 					<div class="panel-heading" id="camp-visitors" role="tab">
 						<h4 class="panel-title">
-							<a aria-controls="visitors" aria-expanded="true" class="collapsed" data-parent="#onsite-leavevisit-faq" data-toggle="collapse" href="#visitors" role="button"> <b>Q</b>: Can my child have visitors during Code@TACC?</a></h4>
+							<a aria-controls="visitors" aria-expanded="true" class="collapsed" data-parent="#onsite-leavevisit-faq" data-toggle="collapse" href="#visitors" role="button"> <b>Q</b>: Can my child have visitors during Code@TACC / GenCyber@TACC?</a></h4>
 					</div>
 					<div aria-labelledby="camp-visitors" class="panel-collapse collapse" id="visitors" role="tabpanel">
 						<div class="panel-body">
