--- a/web-content/root/education/k-12-outreach/students/code-at-tacc-gencyber.html
+++ b/web-content/root/education/k-12-outreach/students/code-at-tacc-gencyber.html
@@ -151,7 +151,7 @@
 				<div class="panel panel-default">
 					<div class="panel-heading" id="ages" role="tab">
 						<h4 class="panel-title">
-							<a aria-controls="ages-answer" aria-expanded="true" class="collapsed" data-parent="#cybersecurity-camp-faq" data-toggle="collapse" href="#ages-answer" role="button"> <b>Q</b>: What are the ages of the Code@TACC participants?</a></h4>
+							<a aria-controls="ages-answer" aria-expanded="true" class="collapsed" data-parent="#cybersecurity-camp-faq" data-toggle="collapse" href="#ages-answer" role="button"> <b>Q</b>: What are the ages of the GenCyber@TACC participants?</a></h4>
 					</div>
 					<div aria-labelledby="ages" class="panel-collapse collapse" id="ages-answer" role="tabpanel">
 						<div class="panel-body">
